# Amber

./: .gitignore  CMakeLists.txt  Makefile  test.cpp
documentation/: Cameras.md  Engine.md  EventManager.md  Manifest.md  Meshes.md  Model.md  ModelManager.md  README.md  RenderCall.md  Scenes.md  Stages.md
examples/events/: CMakeLists.txt  events.cpp
include/: AssetManager.h  Camera.h  CaptureMethod.h  Engine.h  EventManager.h  Frame.h  ITransformable.h  Mesh.h  Model.h  ModelManager.h  ModelTransform.h  Scene.h  Shader.h  Stage.h  Texture.h  engineIO.h  engineUtils.h  event.h  graphics.h  light.h  managers.h  maths.h  rendering.h  variadic.h
include/core/events/: events.h
include/system/: system.h
include/util/: meta.h
src/: AssetManager.cpp  Camera.cpp  CaptureMethod.cpp  Engine.cpp  Engine.h  EventManager.cpp  Frame.cpp  Mesh.cpp  Model.cpp  ModelManager.cpp  ModelTransform.cpp  Scene.cpp  Scene.h  Shader.cpp  Stage.cpp  Stage.h  Texture.cpp  Texture.h  default.vert  engineIO.cpp  engineUtils.cpp  event.cpp  io.cpp  io.h  rendering.cpp
test/: CMakeLists.txt  Demo.cpp  Demo.h  manifest
test/assets/: basic.frag  basic.vert  manifest
test/assets/shaders/: basic.frag  basic.vert  default.frag  pick.frag  pick.vert  texture.frag
test/include/: Sandbox.h  manifest.h  snake.h
test/include/scenes/demo/: DemoLayer.h  DemoScene.h  GroundLayer.h  SnakeScene.h  UILayer.h
test/src/: DemoLayer.cpp  DemoScene.cpp  GroundLayer.cpp  Sandbox.cpp  SnakeScene.cpp  UILayer.cpp  test.cpp
